# studio-bondage-club

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  config.example.json  todo.md  vcpkg.json
.github/workflows/: ci.yml
android/: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/gecko/: AndroidManifest.xml
android/app/src/gecko/assets/extensions/sbc-rpc/: content.js  manifest.json
android/app/src/gecko/java/com/studio/bondageclub/: GeckoViewPrompt.kt  GeckoWebNotification.kt  MainActivity.kt
android/app/src/gecko/res/values/: strings.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  vcpkg-android-toolchain.cmake
android/app/src/main/cpp/vcpkg-triplets/: arm-neon-android.cmake  arm64-android.cmake  x64-android.cmake  x86-android.cmake
android/app/src/main/java/com/studio/bondageclub/: MainActivity.kt  NativeRpc.kt  (+3 more)
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/: libs.versions.toml
cmake/: EmbedWebAssets.cmake
desktop/: CMakeLists.txt  README.md
desktop/cmake/: DownloadCEF.cmake
desktop/src/: cache_resource_handler.cpp  cache_resource_handler.hpp  dbus_notifier.cpp  dbus_notifier.hpp  main.cpp  notifier.cpp  notifier.hpp  notify_send_notifier.cpp  notify_send_notifier.hpp  sbc_app.cpp  sbc_app.hpp  sbc_client.cpp  sbc_client.hpp  sbc_ipc.hpp  sbc_render_process.cpp  sbc_render_process.hpp  window_delegate.cpp  window_delegate.hpp
docs/: BUILD.md  BondageClub
src/: main.cpp
src/cache/: backend.cpp  backend.hpp  flight.hpp  json.cpp  json.hpp  key.cpp  key.hpp  leveldb_store.cpp  leveldb_store.hpp  metadata.hpp  policy.cpp  policy.hpp  router.cpp  router.hpp  traffic_stats.cpp  traffic_stats.hpp  version.cpp  version.hpp
src/common/: base64.cpp  base64.hpp  error.hpp  http_util.cpp  http_util.hpp  json_merge.cpp  json_merge.hpp  random.cpp  random.hpp  sha256.cpp  sha256.hpp  url.cpp  url.hpp
src/config/: config.cpp  config.hpp  field_gen.hpp  json.hpp  store.cpp  store.hpp
src/host/: provider.hpp  provider_context.hpp
src/host/packagehost/: provider.cpp  provider.hpp
src/host/reverseproxy/: provider.cpp  provider.hpp
src/net/: blocking_pool.hpp  content_decoding.cpp  content_decoding.hpp  http_client.cpp  http_client.hpp  io_runtime.cpp  io_runtime.hpp  socks5.cpp  socks5.hpp  stream.hpp  tls.cpp  tls.hpp
src/platform/: paths.hpp  paths_android.cpp  paths_posix.cpp  paths_win.cpp
src/server/: api_util.cpp  api_util.hpp  app.cpp  app.hpp  config_listener.hpp  config_scope.hpp  config_scope_builder.hpp  embedded_assets.hpp  embedded_server.cpp  embedded_server.hpp  homepage.cpp  homepage.hpp  http_server.cpp  http_server.hpp  http_types.hpp  remote_proxy.cpp  remote_proxy.hpp  response_writer.hpp  serve_content.cpp  serve_content.hpp  session.cpp  session.hpp  static_assets.cpp  static_assets.hpp  userscript_defaults.cpp  userscript_defaults.hpp  userscript_metadata.cpp  userscript_metadata.hpp  userscript_store.cpp  userscript_store.hpp  userscript_updater.cpp  userscript_updater.hpp  websocket_proxy.cpp  websocket_proxy.hpp
src/server/gameserver/: game_socket_local.cpp  game_socket_local.hpp
src/server/gameserver/engineio/: eio_protocol.cpp  eio_protocol.hpp
src/server/gameserver/game/: account.hpp  account_manager.cpp  account_manager.hpp  chatroom.hpp  chatroom_manager.cpp  chatroom_manager.hpp  game_app.cpp  game_app.hpp  game_db.cpp  game_db.hpp  game_state.hpp  mailer.cpp  mailer.hpp  password.cpp  password.hpp  settings.hpp
src/server/gameserver/socketio/: connection.cpp  connection.hpp  server.cpp  server.hpp  sio_protocol.cpp  sio_protocol.hpp  socket_facade.cpp  socket_facade.hpp
src/server/rpc/: auth.cpp  auth.hpp  connection.cpp  connection.hpp  dispatcher.cpp  dispatcher.hpp  event_hub.cpp  event_hub.hpp  session.cpp  session.hpp
tests/: cache_test.cpp  config_test.cpp  content_decoding_test.cpp  flight_test.cpp  gameserver_password_test.cpp  gameserver_protocol_test.cpp  gameserver_ratelimit_test.cpp  gameserver_rooms_test.cpp  json_merge_test.cpp  router_test.cpp  rpc_test.cpp  test_framework.hpp  test_main.cpp  traffic_stats_test.cpp  userscript_test.cpp  version_test.cpp
tools/: embed_assets.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.sw.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  originalPage.ts  service-worker.ts  shadow-context.ts  styles.css  types.ts  vite-env.d.ts
web/src/components/cache/: CacheMaintenance.tsx  CacheMigrateDialog.tsx  CacheTrafficDetail.tsx  CacheTrafficPanel.tsx  RuleEditor.tsx  StatusCodesField.tsx  StoreCard.tsx  StoreEditor.tsx  cacheTraffic.tsx
web/src/components/shared/: FormField.tsx  GsNumber.tsx  Panel.tsx  SectionBar.tsx
web/src/components/tabs/: AndroidTab.tsx  CacheTab.tsx  ConnectionTab.tsx  DesktopTab.tsx  GameServerTab.tsx  GameSettingsTab.tsx  ModeTab.tsx  OptimizationsTab.tsx  PackageTab.tsx  PerformanceStats.tsx  UserscriptsTab.tsx
web/src/components/ui/: ConfirmDialog.tsx  badge.tsx  button.tsx  code-editor.tsx  confirm.tsx  input.tsx  label.tsx  master-detail.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  tab-panel.tsx  window-portal.tsx  window.tsx
web/src/components/userscripts/: PendingUpdateDialog.tsx  UserscriptEditor.tsx
web/src/config/: scope.ts
web/src/hooks/: useConfigSync.ts  useSSE.ts
web/src/lib/: platform.ts  utils.ts
web/src/optimizations/: bc-globals.d.ts  bmm-globals.d.ts  debug.ts  flags.ts  host.ts  modManager.ts  optimization.ts  registry.ts  state.ts  stats.ts  tps.ts
web/src/optimizations/features/: chatLogTrim.ts  frameRecorder.ts  idleFpsThrottle.ts  lazyCanvas.ts  renderTracker.ts  skipValidation.ts  tickRecorder.ts  tintCache.ts
web/src/rpc/: client.ts  nativeBridge.ts  nativeTransport.ts  pristine.ts  token.ts  transport.ts  wsTransport.ts
web/src/userscripts/: gmApi.ts  inject.ts  menu.ts  metadata.ts  values.ts
(+1 files in other folders)
